changed image path

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Capture.PNG" width="250" height="250" alt="Akshat's profile photo"></td>
+      <td><img src="image/img.PNG" width="250" height="250" alt="Akshat's profile photo"></td>
       <td>
         <h1>Akshat Sharma</h1>
         <p><em>Part <strong>trader</strong> and <strong>programmer.</strong></em></p>
